<resources>
    <string name="app_name">Exercise</string>
    <string name="tNama">Nama</string>
    <string name="temail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Login</string>
    <string name="bregister">Register</string>
    <string name="tData">Data Anda</string>
    <string name="var1">Ini Pesan</string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Data Login</string>
    <string name="tLogin">Login</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Selamat Datang</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRePass">Masukkan Password Kembali</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="eregister">Register</string>
    <string name="namadftr">Akila</string>
    <string name="lTask">Task</string>
    <string name="jtask">Masukan Task</string>
    <string name="jjtask">Masukan Jenis Task</string>
    <string name="ttask">Masukan Lama Task</string>
    <string name="tks1">Task</string>
    <string name="tks2">Jenis Task</string>
    <string name="tks3">Time</string>
</resources>