<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="60px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#00773F"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/bregister"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/logologin" />

    <EditText
        android:id="@+id/email"
        android:layout_width="255dp"
        android:layout_height="46dp"
        android:layout_marginRight="16dp"
        android:background="@color/lgn"
        android:drawableLeft="@drawable/ic_action_name"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/eEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10px"
        android:textColorHint="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="255dp"
        android:layout_height="46dp"
        android:layout_marginRight="16dp"
        android:background="@color/lgn"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/eNama"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10px"
        android:textColorHint="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <EditText
        android:id="@+id/psswrd"
        android:layout_width="256dp"
        android:layout_height="46dp"
        android:background="@color/lgn"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:drawableRight="@drawable/ic_action_s"
        android:hint="@string/ePass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="256dp"
        android:layout_height="46dp"
        android:background="@color/lgn"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:drawableRight="@drawable/ic_action_s"
        android:hint="@string/eRePass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama "
        android:textColor="@color/black"
        android:textSize="35px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/emill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="35px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/black"
        android:textSize="35px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/rpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re - Password"
        android:textColor="@color/black"
        android:textSize="35px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

</androidx.constraintlayout.widget.ConstraintLayout>